# medium

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: release.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/dev/homeworks/overlay/: MainActivity.kt  SecureStore.kt
apps/android/app/src/main/java/io/burniq/medium/android/: MainActivity.kt  MediumApiClient.kt  MediumModels.kt  MediumNativeBridge.kt  MediumRoutingService.kt  MediumStateStore.kt  PinnedHttpClient.kt  SecureStore.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
apps/android/app/src/main/res/values/: colors.xml
apps/android/app/src/test/java/dev/homeworks/overlay/: SecureStoreTest.kt
apps/android/app/src/test/java/io/burniq/medium/android/: JoinInviteTest.kt  MediumApiClientTest.kt  MediumRoutingServiceTest.kt  PinnedHttpClientTest.kt  SecureStoreTest.kt
apps/apple/: project.yml
apps/apple/MediumApp/: BootstrapView.swift  ClientStateStore.swift  ForegroundBrowserProxy.swift  ForegroundSecureSession.swift  ForegroundTCPStream.swift  ForegroundUdpSession.swift  LaunchScreen.storyboard  MediumAPIClient.swift  MediumApp.swift  MediumAppModel.swift  MediumModels.swift  MediumWebView.swift  PinnedHTTPTransport.swift  PlatformDevice.swift  SecureStore.swift  TunnelManager.swift
apps/apple/MediumAppTests/: ClientStateStoreTests.swift  InviteParserTests.swift  MediumAPITests.swift  MediumRouteTableTests.swift  SecureStoreTests.swift
apps/apple/MediumApple.xcodeproj/: project.pbxproj
apps/apple/MediumApple.xcodeproj/xcshareddata/xcschemes/: MediumMac.xcscheme
apps/apple/OverlayApp/: BootstrapView.swift  OverlayApp.swift
apps/apple/OverlayAppTests/: SecureStoreTests.swift
apps/apple/OverlayApple.xcodeproj/: project.pbxproj
apps/apple/PacketTunnel/: MediumRouteTable.swift  PacketTunnelProvider.swift
apps/linux-client/: Cargo.toml
apps/linux-client/src/: app.rs  cli.rs  client_api.rs  doctor.rs  install.rs  invite.rs  lib.rs  main.rs  paths.rs  ssh.rs  state.rs
apps/linux-client/tests/: app.rs  doctor.rs  init_control.rs  invite.rs  paths.rs  pinned_tls.rs  ssh_sync.rs  systemd.rs
apps/medium-cli/: Cargo.toml
apps/medium-cli/src/: cli.rs  doctor.rs  install.rs  main.rs  paths.rs
apps/medium-cli/tests/: app.rs  doctor.rs  init_control.rs  invite.rs  paths.rs  pinned_tls.rs  ssh_sync.rs  systemd.rs  wss_proxy.rs
crates/client-core/: Cargo.toml  build.rs  uniffi.toml
crates/client-core/src/: api.rs  client_core.udl  lib.rs
crates/client-core/tests/: api.rs
crates/medium-android-netstack/: Cargo.toml
crates/medium-android-netstack/src/: lib.rs
crates/medium-netstack/: Cargo.toml
crates/medium-netstack/src/: lib.rs
crates/overlay-crypto/: Cargo.toml
crates/overlay-crypto/src/: lib.rs
crates/overlay-crypto/tests/: session_token.rs
crates/overlay-protocol/: Cargo.toml
crates/overlay-protocol/src/: ids.rs  lib.rs  messages.rs
crates/overlay-protocol/tests/: messages.rs
crates/overlay-transport/: Cargo.toml
crates/overlay-transport/src/: lib.rs  logging.rs  p2p_diag.rs  pinned_http.rs  session.rs  udp_rendezvous.rs  udp_session.rs
crates/overlay-transport/tests/: p2p_diag.rs  session.rs
docs/adr/: 0001-v1-stack.md
docs/superpowers/plans/: 2026-04-24-medium-packaging-and-bootstrap-v1.md  2026-04-25-secure-node-bootstrap.md
docs/superpowers/specs/: 2026-04-24-medium-packaging-and-bootstrap-design.md  2026-04-25-secure-node-bootstrap-design.md
migrations/: 0001_init.sql
packaging/homebrew/: medium.rb
packaging/linux/: README.md  install-layout.txt
packaging/systemd/: medium-control-plane.service  medium-home-node.service  medium-node-agent.service  medium-relay.service
scripts/: install.sh  package.sh
services/control-plane/: Cargo.toml
services/control-plane/src/: app.rs  lib.rs  main.rs  registry.rs  state.rs
services/control-plane/src/routes/: ca.rs  devices.rs  mod.rs  nodes.rs  pairing.rs  sessions.rs
services/control-plane/tests/: devices.rs  health.rs  pairing.rs  registry.rs  sessions.rs
services/home-node/: Cargo.toml  config.example.toml
services/home-node/src/: adapters.rs  agent.rs  config.rs  control.rs  lib.rs  main.rs  proxy.rs
services/home-node/tests/: adapters.rs  agent.rs  config.rs  control.rs  proxy.rs
services/relay/: Cargo.toml
services/relay/src/: config.rs  lib.rs  main.rs
services/relay/tests/: config.rs  tcp_relay.rs  udp_rendezvous.rs  wss_relay.rs
tests/e2e/: docker-compose.yml  init_control_join.sh  install_script.sh  macos_ssh_sync.sh  package_layout.sh  smoke.sh  wss_relay.sh
tools/uniffi-bindgen/: Cargo.toml
tools/uniffi-bindgen/src/: main.rs
