[workspace]
members = [
  "apps/linux-client",
  "crates/overlay-protocol",
  "crates/overlay-crypto",
  "crates/overlay-transport",
  "crates/client-core",
  "services/control-plane",
  "services/home-node",
  "services/relay",
  "tools/uniffi-bindgen",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
quinn = "0.11"
rcgen = "0.14"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = { version = "0.29", features = ["build"] }
uuid = { version = "1", features = ["v4", "serde"] }
