[package]
name = "linux-client"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "overlay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
client-core = { path = "../../crates/client-core" }
home-node = { path = "../../services/home-node" }
overlay-protocol = { path = "../../crates/overlay-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
