[package]
name = "client-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
overlay-protocol = { path = "../overlay-protocol" }
serde.workspace = true
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi.workspace = true
