[package]
name = "medium-android-netstack"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger.workspace = true
anyhow.workspace = true
jni.workspace = true
libc.workspace = true
log.workspace = true
medium-netstack = { path = "../medium-netstack" }
overlay-protocol = { path = "../overlay-protocol" }
overlay-transport = { path = "../overlay-transport" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
socket2 = "0.5"
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
url.workspace = true
