[package]
name = "overlay-transport"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
overlay-protocol = { path = "../overlay-protocol" }
quinn.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
