[package]
name = "home-node"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
overlay-crypto = { path = "../../crates/overlay-crypto" }
overlay-protocol = { path = "../../crates/overlay-protocol" }
overlay-transport = { path = "../../crates/overlay-transport" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
tokio.workspace = true
toml = "0.9"
tracing.workspace = true
tracing-subscriber.workspace = true
