[package]
name = "relay"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
overlay-crypto = { path = "../../crates/overlay-crypto" }
overlay-transport = { path = "../../crates/overlay-transport" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.29"
